cc/animation/keyframe_model_unittest.cc
@@ -438,16 +438,67 @@ TEST(KeyframeModelTest, TrimTimeNegativeTimeOffsetReverse) {
                 .InSecondsF());
 }
 
+TEST(KeyframeModelTest, TrimTimePauseBasic) {
+  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(1));
+  keyframe_model->set_fill_mode(KeyframeModel::FillMode::NONE);
+
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
+  // When paused, the time returned is always the pause time
+  EXPECT_EQ(0.5,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(-1))
+                .InSecondsF());
+  EXPECT_EQ(0.5,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.2))
+                .InSecondsF());
+  EXPECT_EQ(0.5,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(2))
+                .InSecondsF());
+}
+
+TEST(KeyframeModelTest, TrimTimePauseAffectedByDelay) {
+  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(1));
+  keyframe_model->set_fill_mode(KeyframeModel::FillMode::NONE);
+  // Pause time is in local time so delay should apply on top of it.
+  keyframe_model->set_time_offset(TimeDelta::FromSecondsD(-0.2));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
+  EXPECT_EQ(0.3,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.1))
+                .InSecondsF());
+
+  keyframe_model->set_time_offset(TimeDelta::FromSecondsD(0.2));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
+  EXPECT_EQ(0.7,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.1))
+                .InSecondsF());
+}
+
+TEST(KeyframeModelTest, TrimTimePauseNotAffectedByStartTime) {
+  std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(1));
+  keyframe_model->set_fill_mode(KeyframeModel::FillMode::NONE);
+  // Pause time is in local time so start time should not affect it.
+  keyframe_model->set_start_time(TicksFromSecondsF(0.2));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
+  EXPECT_EQ(0.5,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.1))
+                .InSecondsF());
+
+  keyframe_model->set_start_time(TicksFromSecondsF(0.4));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
+  EXPECT_EQ(0.5,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.1))
+                .InSecondsF());
+}
+
 TEST(KeyframeModelTest, TrimTimePauseResume) {
   std::unique_ptr<KeyframeModel> keyframe_model(CreateKeyframeModel(1));
   keyframe_model->SetRunState(KeyframeModel::RUNNING, TicksFromSecondsF(0.0));
   EXPECT_EQ(0,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.0))
                 .InSecondsF());
-  EXPECT_EQ(0.5,
-            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.5))
+  EXPECT_EQ(0.4,
+            keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.4))
                 .InSecondsF());
-  keyframe_model->SetRunState(KeyframeModel::PAUSED, TicksFromSecondsF(0.5));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.5));
   EXPECT_EQ(
       0.5, keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(1024.0))
                .InSecondsF());
@@ -459,6 +510,15 @@ TEST(KeyframeModelTest, TrimTimePauseResume) {
   EXPECT_EQ(
       1, keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(1024.5))
              .InSecondsF());
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.6));
+  EXPECT_EQ(
+      0.6, keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(2000.0))
+               .InSecondsF());
+  keyframe_model->SetRunState(KeyframeModel::RUNNING,
+                              TicksFromSecondsF(2000.0));
+  EXPECT_EQ(
+      0.7, keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(2000.1))
+               .InSecondsF());
 }
 
 TEST(KeyframeModelTest, TrimTimePauseResumeReverse) {
@@ -471,7 +531,7 @@ TEST(KeyframeModelTest, TrimTimePauseResumeReverse) {
   EXPECT_EQ(0.5,
             keyframe_model->TrimTimeToCurrentIteration(TicksFromSecondsF(0.5))
                 .InSecondsF());
-  keyframe_model->SetRunState(KeyframeModel::PAUSED, TicksFromSecondsF(0.25));
+  keyframe_model->Pause(base::TimeDelta::FromSecondsD(0.25));
   EXPECT_EQ(0.75, keyframe_model
                       ->TrimTimeToCurrentIteration(TicksFromSecondsF(1024.0))
                       .InSecondsF());
